Accidentally removed register hotkey for Kill Connections my b queen

--- a/Netlimiter-Alternative/Netlimiter-Alternative.csproj
+++ b/Netlimiter-Alternative/Netlimiter-Alternative.csproj
@@ -52,6 +52,9 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CoreLibNet">
       <HintPath>..\..\..\..\Documents\Vision 2\Vision Client\bin\x64\Debug\CoreLibNet.dll</HintPath>
@@ -85,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="app.manifest" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
